<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/coefficient_x_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/plus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coefficient_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/label_x"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/plus"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/coefficient_x_layout"
        app:layout_constraintEnd_toStartOf="@id/coefficient_y_layout"
        app:layout_constraintStart_toEndOf="@id/coefficient_x_layout"
        app:layout_constraintTop_toTopOf="@id/coefficient_x_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/coefficient_y_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_x"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/complex"
        app:layout_constraintStart_toEndOf="@id/plus"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coefficient_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/label_y"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/complex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/complex"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/coefficient_x_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/coefficient_y_layout"
        app:layout_constraintTop_toTopOf="@id/coefficient_x_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>